feat: criando rota de buscar os usuários e suas inscrições
