# src/routes/information-router.js
@@ -6,5 +6,10 @@ import { Auth } from '../middleware/auth-middleware';
 const router = express.Router();
 
 router.get('/info/schedulers', Auth(), informationController.getSchedulers);
+router.get(
+  '/info/users/schedulers',
+  Auth(),
+  informationController.getUsersSchedulers,
+);
 
 export default router;
